[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/areas/Arena.gd" type="Script" id=1]
[ext_resource path="res://images/Arena.png" type="Texture" id=2]
[ext_resource path="res://scenes/enemies/Boss1.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://font/Frostbite_64.tres" type="DynamicFont" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 1280, 720 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 1280, 720 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 720, 1280, 720 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1440, 1280, 720 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "cheering",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12.4323, 89.3658 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 60.9033, 88.8693 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 835.054, 5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 2, 360.123 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 267.113 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 134.234, 10 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 108.227 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 6.65126, 96.8545 )

[node name="Arena" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="AnimatedSprite" parent="."]
position = Vector2( 640, 360 )
frames = SubResource( 5 )
animation = "idle"
__meta__ = {
"_edit_group_": true
}

[node name="Start_fight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Start_collision" type="CollisionShape2D" parent="Start_fight"]
position = Vector2( 100.589, 624.177 )
shape = SubResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Leave_arena" type="Area2D" parent="."]
position = Vector2( -96.7361, 619.162 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="Leavebox" type="CollisionShape2D" parent="Leave_arena"]
shape = SubResource( 7 )
disabled = true

[node name="Leave_text" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
margin_left = -203.0
margin_right = 203.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( 203, 0 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LEAVE THE ARENA"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Bounce_up" type="Tween" parent="Leave_text"]
repeat = true
playback/repeat = true

[node name="Bounce_down" type="Tween" parent="Leave_text"]

[node name="Effect_in" type="Tween" parent="Leave_text"]

[node name="Ground_and_walls" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Ground" type="StaticBody2D" parent="Ground_and_walls"]
position = Vector2( 640, 720 )
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="Ground_and_walls/Ground"]
shape = SubResource( 8 )

[node name="Right_wall" type="StaticBody2D" parent="Ground_and_walls"]
position = Vector2( 1280, 360 )
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="Ground_and_walls/Right_wall"]
shape = SubResource( 9 )

[node name="Left_wall" type="StaticBody2D" parent="Ground_and_walls"]
position = Vector2( 0, 180 )
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="Ground_and_walls/Left_wall"]
position = Vector2( -4.00452, 77.4207 )
shape = SubResource( 10 )

[node name="Entrance_roof" type="StaticBody2D" parent="Ground_and_walls"]
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="Ground_and_walls/Entrance_roof"]
position = Vector2( -128.829, 513.388 )
shape = SubResource( 11 )

[node name="Entrance_wall" type="StaticBody2D" parent="Ground_and_walls"]

[node name="shape" type="CollisionShape2D" parent="Ground_and_walls/Entrance_wall"]
position = Vector2( -182.174, 615.259 )
shape = SubResource( 12 )

[node name="Entrance_door" type="StaticBody2D" parent="Ground_and_walls"]
collision_mask = 0

[node name="Door" type="CollisionShape2D" parent="Ground_and_walls/Entrance_door"]
position = Vector2( 0.430252, 620.295 )
shape = SubResource( 13 )
disabled = true

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( -115.323, 626.602 )

[node name="Boss1" parent="." instance=ExtResource( 3 )]
position = Vector2( 1215.63, 615.109 )

[connection signal="body_entered" from="Start_fight" to="." method="_on_Start_fight_body_entered"]
[connection signal="body_entered" from="Leave_arena" to="." method="_on_Leave_arena_body_entered"]
[connection signal="tween_completed" from="Leave_text/Bounce_up" to="." method="_on_Bounce_up_tween_completed"]
[connection signal="tween_completed" from="Leave_text/Effect_in" to="." method="_on_Effect_in_tween_completed"]
[connection signal="enemy_hit" from="Player" to="." method="_on_Player_enemy_hit"]
